resubmitted second round March 5

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -376,7 +376,7 @@ All data used in this study have been independently published and are accessible
 \end{spacing}
 \clearpage
 
-% \captionsetup{singlelinecheck=false, font={stretch=2}}
+\captionsetup{singlelinecheck=false, font={stretch=2}}
 
 \section*{Figures}
 
