working through SI

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -369,7 +369,7 @@ DG designed the analytical approach. AC and DG wrote the code. AC performed stat
 
 \section*{Data accessibility}
 
-All data used in this study have been independently published and are accessible following the references provided in text.
+Data from~\citet{Kopelke2017} used in this manuscript is available from \emph{https://doi.org/10.1002/ecy.1832}. Data from~\citet{Barbour2016} used in this manuscript is available from \emph{https://doi.org/10.5061/dryad.g7805}. All code used in this manuscript is available in the online supporting information. 
 
 
 
