--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -28,13 +28,18 @@
 \title{A quantitative framework for investigating the reliability of empirical network construction: supplemental information}
 
 
-\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2}$, Kate Wootton$^{2}$, Dominique Gravel$^{3}$}
+\author{Alyssa R. Cirtwill$^{1,2\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{3}$, Kate Wootton$^{3}$, Dominique Gravel$^{4}$}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
 Link\"{o}ping, Sweden\\
-\medskip $^2$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
-\medskip$^3$ D\'{e}partement de biologie\\ 
+\medskip $^2$
+Current address: Department of Ecology,\\
+Environment, and Plant Sciences (DEEP)\\
+Stockholm University\\
+Stockholm, Sweden\\
+\medskip $^3$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
+\medskip$^4$ D\'{e}partement de biologie\\ 
 Universit\'{e} de Sherbrooke\\ 
 Sherbrooke, Canada\\ 
 \medskip
@@ -50,11 +55,11 @@ alyssa.cirtwill@gmail.com\\
 \setlength{\parindent}{15pt} 
 \clearpage
 
-\linenumbers
+% \linenumbers
 
 \section*{Appendix S1: Simulating the effects of uncertainty on network structure}
 
-  To demonstrate the effects of nested interaction, process, and detection uncertainty on network structure (see Fig. 1, main text), we can observe how the structure of randomly-generated networks changes as we add layers of uncertainty. We began by constructing 100 ``true" networks with 50 consumer species, 50 resource species, and a connectance of 0.1. We ensured that each network had at least one link per consumer and per resource. For each network, we calculated the mean number of links per consumer, mean number of links per resource, and nestedness (NODF) as described in the main text. For simplicity, we assume that there is no interaction uncertainty in this system (i.e., all interactions are either 100\% feasible or 100\% unfeasible based on species' traits).
+  To demonstrate the effects of nested interaction, process, and detection uncertainty on network structure (see Fig. 1, main text), we can observe how the structure of randomly-generated networks changes as we add layers of uncertainty. We began by constructing 100 ``true" networks with 50 consumer species, 50 resource species, and a connectance of 0.1. We ensured that each network had at least one link per consumer and per resource. For each network, we calculated the mean number of links per consumer, mean number of links per resource, and nestedness (NODF). For simplicity, we assume that there is no interaction uncertainty in this system (i.e., all interactions are either 100\% feasible or 100\% unfeasible based on species' traits).
 
 
   Taking each ``true" network as a starting point, we then applied process uncertainty. The probability $p_{ij}$ of the occurrence of each interaction on a given sampling day was assigned a random probability drawn from the uniform distribution. As the probability that an interaction will occur during sampling also depends on the probability of the two species co-occurring, we also assigned a random number of sampling days on which each species co-occurred. The number of co-occurrences, $n_{ij}$, was drawn from a uniform distribution and could be any integer between 0 and 30 (our simulated number of sampling days), inclusive. The number of occurrences, $k_{ij}$, of each interaction was then drawn from a binomial distribution based on $n_{ij}$ and $p_{ij}$. If the number of occurrences during sampling was greater than 0 and the interaction occurred in the true network, we included the interaction in the ``process-filtered" network. As the inclusion of interactions in the process matrices is random, we created 100 process-filtered networks for each true network. For each network, we calculated the number of consumers and resources (after removing any species with no interactions), mean links per consumer and per resource, connectance, and NODF.
@@ -63,7 +68,7 @@ alyssa.cirtwill@gmail.com\\
   Next, we applied a layer of detection uncertainty to create ``detection-filtered" networks. As with the process-filtered networks, we randomly selected the number of times each species co-occurred, $n_{ij}$, from a uniform distribution. We also randomly selected the probability, $p$, of detecting each interaction. To reflect the fact that some interactions are easy to observe but many will be more difficult (because one or both interaction partners are rare, cryptic, or difficult to rear in the lab), we drew $p$ from a beta distribution with shape parameters 2 and 10. We created 100 detection-filtered networks for each process-filtered network (10000 per true network). For each network, we calculated the number of consumers and resources (after removing any species with no interactions), mean links per consumer and per resource, connectance, and NODF. Code used in this simulation example is contained in the file \emph{simulation\_example.R}, uploaded separately.
 
 
-  With each additional layer of uncertainty, the number of consumers and resources included in the web decreased (mean 49.8 of each species type in detection-filter webs and mean 48.6 of each type in process-filtered webs). The connectance and number of links per consumer and per resource decreased significantly at each level (Fig.~\ref{sim_props}A,B,D; $p$\textless0.001 in all cases based on one-tailed Student's t tests). The effects of uncertainty on nestedness were less predictable, particularly in the detection-filtered webs where variability was much higher than in other web types. Nevertheless, mean nestedness was lower in detection-filtered webs than in the original webs ($t$=19.9, $p$\textless0.001) and lower in the process-filtered webs than the original and detection-filtered webs (Fig.~\ref{sim_props}C; $t$=32.8, $p$\textless0.001 and $t$=93.7, $p$\textless0.001). We note that these tests may reflect the large number of detection-filtered webs generated by our simulation. A single observed network drawn from these detection-filtered webs might well have a higher nestedness than the ``true" network. This simulation demonstrates the fact that process and detection uncertainty mean that we are very unlikely to observe all of the interactions that can truly occur in a system. It also highlights the sometimes unpredictable effects that this uncertainty can have on higher-order structures such as nestedness.
+  With each additional layer of uncertainty, the number of consumers and resources included in the web decreased (mean 49.8 of each species type in detection-filter webs and mean 48.6 of each type in process-filtered webs). The connectance and number of links per consumer and per resource decreased significantly at each level (Fig.~\ref{sim_props}A, B, D; $p$\textless0.001 in all cases based on one-tailed Student's t tests). The effects of uncertainty on nestedness were less predictable, particularly in the detection-filtered webs where variability was much higher than in other web types. Nevertheless, mean nestedness was lower in detection-filtered webs than in the original webs ($t$=19.9, $p$\textless0.001) and lower in the process-filtered webs than the original and detection-filtered webs (Fig.~\ref{sim_props}C; $t$=32.8, $p$\textless0.001 and $t$=93.7, $p$\textless0.001). We note that these tests may reflect the large number of detection-filtered webs generated by our simulation. A single observed network drawn from these detection-filtered webs might well have a higher nestedness than the ``true" network. This simulation demonstrates the fact that process and detection uncertainty mean that we are very unlikely to observe all of the interactions that can truly occur in a system. It also highlights the sometimes unpredictable effects that this uncertainty can have on higher-order structures such as nestedness.
 
 
   Note that this simulation uses several simplifying assumptions. For instance, we treat interactions as independent and ignore the possibility for, for example, competition between resources. A thorough exploration of the effects of interaction contingency, different distributions of co-occurrences, etc. would be an interesting topic for future work but is beyond the scope of the current study. We also neglect interaction uncertainty in this example. Interaction uncertainty could be included by, for example, modelling interactions between individuals of each species. In this framework, individuals could vary in some trait (e.g., body size) that affects the interactions in which they participate. Very small or very large individuals might not participate in some interactions that are feasible for most members of the species. 
@@ -115,7 +120,7 @@ alyssa.cirtwill@gmail.com\\
         When considering a metaweb, we wish to separate the unobserved interactions where $L_{ij} = 0$ (i.e., unfeasible interactions) from interactions which could occur but did not at a particular sampling site or which occurred but were not detected (Fig. 1, main text). Unfortunately, this is not possible for most interactions (except those where we know an interaction is truly not feasible). That is, we generally do not know \emph{why} an interaction was not observed, only that it was not. An empirical ecologist will instead measure the marginal probability $P(L_{ij}) = k_{ij}/n_{ij}$, where $k_{ij}$ is the number of observed interactions between species $i$ and $j$ and $n_{ij}$ the number of observed co-occurrences. Given this information, the question becomes: how can we reduce the uncertainty around our estimated interaction probability?
 
 
-        The obvious rule of thumb to reduce uncertainty is ``sample more". Where resources permit, increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L_{ij} = 1$ but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present~\citep{Gravel2018}), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig. 2C, main text). While this improves our understanding of the set of species present in the community, it introduces yet more uncertainty into the matrix of feasible interactions. Note that it is better to identify the set of potential interactions than to miss a species, so sampling effort should not be reduced in order to exclude rare species.
+        The obvious rule of thumb to reduce uncertainty is ``sample more". Where resources permit, increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L_{ij} = 1$ but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present [\citealp{Gravel2018}]), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig. 2C, main text). While this improves our understanding of the set of species present in the community, it introduces yet more uncertainty into the matrix of feasible interactions. Note that it is better to identify the set of potential interactions than to miss a species, so sampling effort should not be reduced in order to exclude rare species.
 
 
         An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between species $i$ and $j$, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe~\citep{Carstensen2014,Jordano2016}. Combining multiple sampling types can reduce this type of bias~\citep{Wirta2014,Jordano2016}. Nevertheless, despite substantial improvements in recent decades, most available interaction networks are still undersampled and, moreover, are only subsets of larger communities~\citep{Bartomeus2013,Jordano2016}. 
@@ -235,8 +240,7 @@ alyssa.cirtwill@gmail.com\\
 
         \vspace{12pt}
         \noindent\emph{
-          degree=c(14, 4, 2, 3, 17, 6, 2, 15, 1, 1)
-            }.
+          degree=c(14, 4, 2, 3, 17, 6, 2, 15, 1, 1)}.
           \vspace{12pt}
 
         If the network has 20 species total, this gives the normalised degrees:
@@ -250,10 +254,10 @@ alyssa.cirtwill@gmail.com\\
 
         \vspace{12pt}
         \noindent\emph{
-           int\_probs = c(0.358, 0.110, 0.055, 0.082, 0.468, 0.165, 0.055, 0.412, 0.028, 0.028) }.
+           int\_probs = c(0.358, 0.110, 0.055, 0.082, 0.468, 0.165, 0.055, 0.412, 0.028, 0.028)}.
           \vspace{12pt}
 
-        The mean of these interaction probabilities is 0.176, approximately two-thirds the $\lambda_{ij,MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{ij,MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S7}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S7}), we find a prior $\bar\lambda_{ij}$=0.177 and var($\lambda_{ij}$)=0.026. Adding the observed data ($n_{ij}=10$, $k_{ij}=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda_{ij}$=0.256 and var($\lambda_{ij}$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data about interactions between species $i$ and $j$ has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S7}). In this case, a 95\% credible interval for $\bar\lambda_{ij}$ is (0.080, 0.491).
+        The mean of these interaction probabilities is 0.176, approximately two-thirds of the $\lambda_{ij,MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{ij,MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S7}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S7}), we find a prior $\bar\lambda_{ij}$=0.177 and var($\lambda_{ij}$)=0.026. Adding the observed data ($n_{ij}=10$, $k_{ij}=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda_{ij}$=0.256 and var($\lambda_{ij}$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data about interactions between species $i$ and $j$ has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S7}). In this case, a 95\% credible interval for $\bar\lambda_{ij}$ is (0.080, 0.491).
 
 
         Now, consider the case where the two species have never been observed interacting across $n_{ij}$ trials, i-e. $k_{ij}=0$. The question is then ``what is the probability that these two species do not interact''? Since it is not possible to prove that the two species could never interact (strictly speaking, in a Bayesian approach $\lambda_{ij}=0$ is impossible), we must fix a threshold below which we consider that there is no interaction ($\lambda_{ij}\sim0$). We call this threshold probability $\lambda_{ij}*$. We then use the cumulative distribution function to estimate $P(\lambda_{ij}<\lambda_{ij}*|L=0,n)$ for different $n_{ij}$. The function ``samples\_for\_threshold" in \emph{Appendix S7} calculates distribution function for $\lambda_{ij}*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda_{ij}*$=0.1 (recall Fig.~\ref{upper_limits}, Box 2). Note the special case where there is no observation of the two species co-occurring, $n_{ij}= 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur.
@@ -269,14 +273,12 @@ alyssa.cirtwill@gmail.com\\
       and hymenopteran inquilines). The data were collected over 29 years 
       (1982-2010) at 374 unique locations across Europe ranging from Sicily to 
       the Arctic. Since the dataset includes repeated visits to a number of sites, the data set 
-      contains 641 site-visits. Here we take the more conservative approach and pool visits to the same site for a sample size of 374 sub-networks.
+      contains 641 site visits. Here we take the more conservative approach and pool visits to the same site for a sample size of 374 sub-networks.
 
       The meta-network consists of 1,173 different interactions 
       between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 parasitoid 
       nodes. Interactions were determined by dissecting and rearing gall 
-      inhabitants from 165,424 galls. Some sites were visited repeatedly, for a 
-      total of 641 site-visits. We consider these to be repeated samples and 
-      take the 374 unique sites as our sample size.
+      inhabitants from 165,424 galls. 
 
 \clearpage
 
@@ -287,7 +289,7 @@ alyssa.cirtwill@gmail.com\\
       As with the galler-natural enemy component (presented in the main text), we estimated frequencies of \emph{Salix}-galler interactions based on the normalised degree of each species. We obtained prior parameters of $\alpha$=8.72, $\beta$=305 for the \emph{Salix}-galler component. These prior parameters were then used to estimate the posterior distribution. 
 
 
-      For species where $n_{ij}=0$ (3,986/4,992 \emph{Salix}-galler pairs in our dataset), estimates for the mean and variance of $\lambda_{ij}$ can be calculated directly from the prior distribution. For the \emph{Salix}-galler network, these parameters were: $\bar\lambda_{ij}$=0.028, var($\lambda_{ij}$)=8.60$\times$10$^{-5}$; note that this mean is much lower than that obtained using a prior based on~\citet[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}. Note that, despite the intensive sampling in the~\ref{Kopelke2017} dataset, most \emph{Salix}-galler pairs were never observed co-occurring (3,986/4,992; Fig.~\ref{histograms}).
+      For species where $n_{ij}=0$ (3,986/4,992 \emph{Salix}-galler pairs in our dataset), estimates for the mean and variance of $\lambda_{ij}$ can be calculated directly from the prior distribution. For the \emph{Salix}-galler network, these parameters were: $\bar\lambda_{ij}$=0.028, var($\lambda_{ij}$)=8.60$\times$10$^{-5}$; note that this mean is much lower than that obtained using a prior based on~\citet[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}. This low mean corresponds to the fact that, despite the intensive sampling in the~\citet{Kopelke2017} dataset, most \emph{Salix}-galler pairs were never observed co-occurring (3,986/4,992; Fig.~\ref{histograms}).
 
 
       \begin{figure}[h!]
